--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,12 +15,10 @@
     </style>
 
     <style name="Theme.TaxiEasyUa.NoActionBar">
+        <item name="android:windowBackground">@color/background_color_new</item>
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:textColor">@color/black</item> <!-- Replace #FF0000 with your desired color code -->
-        <!--        <item name="android:windowTranslucentNavigation">true</item>-->
-        <!--        <item name="android:fitsSystemWindows">true</item>-->
-        <!--        <item name="android:clipToPadding">false</item>-->
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.TaxiEasyUa.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
