--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/nav_driver"
         android:orderInCategory="100"
         android:title="@string/driver" />
-    <item
-        android:id="@+id/nav_city"
-        android:orderInCategory="100"
-        android:title="@string/city" />
+<!--    <item-->
+<!--        android:id="@+id/nav_city"-->
+<!--        android:orderInCategory="100"-->
+<!--        android:title="@string/city" />-->
     <item
         android:id="@+id/gps"
         android:orderInCategory="100"
