--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,4 +1,4 @@
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<paths>
     <!-- Путь к каталогу кэша вашего приложения -->
     <cache-path
         name="cache"
