--- a/app/src/main/res/layout/fragment_finish_separate.xml
+++ b/app/src/main/res/layout/fragment_finish_separate.xml
@@ -282,7 +282,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/buttons"
             android:fontFamily="@font/regular"
-            android:text="@string/textStatus"
+            android:text="@string/add_cost_btn"
 
             android:textAlignment="center"
             android:textColor="#D9D9D9"
