--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,5 @@
     <color name="background_color">#434C5E</color>
     <color name="background_color_new">#434C5E</color>
     <color name="gray">#464545</color>
+    <color name="colorDefault">#D9D9D9</color>
 </resources>
