--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,4 +60,11 @@
         android:name="com.taxi.easy.ua.ui.finish.fragm.FinishSeparateFragment"
         android:label="@string/your_order"
         tools:layout="@layout/fragment_finish_separate" />
+
+    <fragment
+        android:id="@+id/nav_restart"
+        android:name="com.taxi.easy.ua.ui.restart.RestartFragment"
+        android:label="@string/your_order"
+        tools:layout="@layout/fragment_restart" />
+
 </navigation>
