--- a/app/src/main/res/values-uk/arrays.xml
+++ b/app/src/main/res/values-uk/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="language_en">англійська</string>
-    <string name="language_ru">російська</string>
+    <string name="language_en">english</string>
+    <string name="language_ru">русский</string>
     <string name="language_uk">українська</string>
 </resources>
