--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -72,5 +72,11 @@
         android:name="com.taxi.easy.ua.ui.visicom.visicom_search.VisicomSearchFragment"
         android:label="@string/search_address"
         tools:layout="@layout/fragment_visicom_search" />
+    <fragment
+        android:id="@+id/nav_cacheOrder"
+        android:name="com.taxi.easy.ua.ui.finish.fragm.CacheOrderFragment"
+        android:label="@string/your_order"
+        tools:layout="@layout/fragment_cache_order" />
+
 
 </navigation>
